--- a/frontend/dapp.html
+++ b/frontend/dapp.html
@@ -1,1 +1,243 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mindfulness dAPP</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/icomoon.css">
+    <link rel="stylesheet" href="css/simple-line-icons.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/modernizr-2.6.2.min.js"></script>
+    <style>
+        body {
+            background-color: #000000; /* Black background */
+            color: #ffffff; /* White text */
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background: #4CAF50;
+            padding: 10px;
+            text-align: center;
+            color: white;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+        }
+        header img {
+            height: 40px;
+            vertical-align: middle;
+            margin-right: 10px;
+        }
+        main {
+            padding-top: 70px;
+            max-width: 800px;
+            margin: auto;
+        }
+        .app-container {
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 15px;
+            background-color: #000000; /* Black background */
+            color: #ffffff; /* White text */
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .wellness-professionals {
+            margin: 20px 0;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            background-color: #000000; /* Black background */
+            color: #ffffff; /* White text */
+        }
+        .wellness-professionals h3 {
+            margin-top: 0;
+        }
+        button.vote-button, button.stake-button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 15px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 10px;
+            cursor: pointer;
+            border: none;
+            border-radius: 12px;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+        button.vote-button:hover, button.stake-button:hover {
+            background-color: #45a049;
+            transform: scale(1.1);
+        }
+        button.vote-button:active, button.stake-button:active {
+            transform: scale(0.9);
+        }
+        .result {
+            margin-top: 20px;
+            font-size: 18px;
+            font-weight: 500;
+        }
+        footer {
+            background: #4CAF50;
+            padding: 10px;
+            text-align: center;
+            color: white;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+        /* Button 34 Styles */
+        .btn-34,
+        .btn-34 *,
+        .btn-34:after,
+        .btn-34:before {
+          border: 0 solid;
+          box-sizing: border-box;
+        }
+        .btn-34 {
+          -webkit-tap-highlight-color: transparent;
+          -webkit-appearance: button;
+          -moz-appearance: button;
+          appearance: button;
+          background-color: #000; /* Black background */
+          background-image: none;
+          color: #fff;
+          cursor: pointer;
+          font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+            Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+            Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+          font-size: 100%;
+          font-weight: 900;
+          line-height: 1.5;
+          margin: 0;
+          mask-image: radial-gradient(#000, #fff);
+          padding: 0;
+          text-transform: uppercase;
+          border-radius: 99rem;
+          border-width: 2px;
+          overflow: hidden;
+          padding: 0.8rem 3rem;
+          position: relative;
+        }
+        .btn-34:disabled {
+          cursor: default;
+        }
+        .btn-34:focus {
+          outline: 2px solid #fff;
+        }
+        .btn-34:-moz-focusring {
+          outline: auto;
+        }
+        .btn-34 svg {
+          display: block;
+          vertical-align: middle;
+        }
+        .btn-34 [hidden] {
+          display: none;
+        }
+        .btn-34:hover {
+          transform: scale(1.1);
+        }
+        .btn-34 span {
+          font-weight: 900;
+          mix-blend-mode: difference;
+        }
+        .btn-34:before {
+          aspect-ratio: 1;
+          background: #fff;
+          border-radius: 50%;
+          content: "";
+          left: 50%;
+          position: absolute;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          transition: width 0.2s;
+          width: 0;
+        }
+        .btn-34:hover:before {
+          width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <img src="logo.png" alt="Logo">
+        <h1>Mindfulness dAPP</h1>
+    </header>
+    <main>
+        <div class="app-container">
+            <section class="wellness-professionals">
+                <h3>Wellness Professionals</h3>
+                <ul id="professionalList"></ul>
+            </section>
+            <section style="background-image: url('images/full_image_1.jpg');" data-stellar-background-ratio="0.5">
+                <h2>About this dApp</h2>
+                <p>This is a sample voting dApp frontend. In future updates, this dApp will be expanded with smart contract integration, allowing for decentralized and transparent voting for wellness professionals.</p>
+            </section>
+            <section>
+                <h2>HiveSigner</h2>
+                <button id="hivesigner-login" class="btn-34"><span>HiveSigner</span></button>
+            </section>
+        </div>
+    </main>
+    <footer>
+        <p>© 2025 Mindfulness Community</p>
+    </footer>
+    <script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const professionals = [
+            { name: 'Dr. John Doe', address: '0x123...' },
+            { name: 'Jane Smith', address: '0x456...' }
+        ];
+        const professionalList = document.getElementById('professionalList');
+        professionals.forEach(professional => {
+            const li = document.createElement('li');
+            li.innerHTML = `
+                <div>
+                    <h4>${professional.name}</h4>
+                    <button type="button" class="vote-button" data-vote="1" data-address="${professional.address}">Upvote</button>
+                    <button type="button" class="vote-button" data-vote="2" data-address="${professional.address}">Downvote</button>
+                </div>
+            `;
+            professionalList.appendChild(li);
+        });
 
+        const hivesignerLoginButton = document.getElementById('hivesigner-login');
+        hivesignerLoginButton.addEventListener('click', function() {
+            window.location.href = 'http://localhost:3000/login'; // Adjust URL as needed
+        });
+
+        // Handle HiveSigner callback
+        const urlParams = new URLSearchParams(window.location.search);
+        const accessToken = urlParams.get('access_token');
+        if (accessToken) {
+            fetch(`http://localhost:3000/callback?access_token=${accessToken}`)
+                .then(response => response.json())
+                .then(data => {
+                    console.log('User authenticated', data);
+                    // Handle authenticated user data
+                })
+                .catch(error => {
+                    console.error('Error during authentication', error);
+                });
+        }
+    });
+</script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/jquery.stellar.min.js"></script>
+    <script src="js/jquery.countTo.js"></script>
+    <script src="js/main.js"></script>
+</body>
+</html>
